
2011-12-27
- bios/bios.c bios/dma.c bios/dma.h bios/mfp.c bios/mfp.h bios/xbios.c
  include/config.h: Added the CONF_WITH_MFP define to allow disabling MFP
  support. (VRI)
- bios/xbios.c: Fixed DBG_XBIOS. (VRI)
- bios/xbios.c bios/xbios.h: Removed obsolete xbiosinit(). (VRI)
- bios/xbios.c bios/xbios.h: Make all XBIOS functions extern. (VRI)
- bios/bios.c bios/xbios.c: Make debug wrappers static. (VRI)
- bios/bios.h: Added prototypes for misc BIOS functions. (VRI)

2011-12-28
- bios/screen.c bios/screen.h bios/vectors.S include/config.h: Added the
  CONF_WITH_SHIFTER define to allow disabling Shifter support. (VRI)
- bios/vectors.S: Added the DBG_CHECK_READ_BYTE define to allow tracing
  check_read_byte() calls. (VRI)
- bios/biosmem.c bios/screen.c include/config.h: Added the CONF_VRAM_ADDRESS
  define to use a fixed video ram area out of the ST-RAM. (VRI)
- include/config.h: Moved target specific defaults to a separate section. (VRI)
- include/config.h: Added the CONF_WITH_DESK1 define to simplify the conditional
  definition of DESK1. (VRI)
- bios/cookie.h bios/machine.c include/config.h: Added the CONF_ATARI_HARDWARE
  define to allow disabling support for all Atari hardware. (VRI)

2011-12-29
- aes/gemgsxif.c aes/gemobjop.c bdos/bdosmain.c bdos/fsdir.c bdos/fsdrive.c
  bdos/fsio.c bdos/iumem.c bdos/kpgmld.c bdos/proc.c bdos/umem.c
  bios/kprint.h include/kprint.h: Moved kprint.h from bios/ to include/,
  its logical place. (RFB)
- aes/geminit.c aes/gemstart.S: Call C routine to init stack pointer, rather
  than relying on 'magic number'. (RFB)
- include/compat.h: Removed obsolete, unused, defines. (RFB)

2012-01-01
- bios/floppy.c: Increased the FDC timeout to 3 seconds. (VRI)
- include/config.h: Set CONF_WITH_FASTRAM=0 when !CONF_ATARI_HARDWARE. (VRI)
- bios/panicasm.S: Minor optimization of halt(). (VRI)
- bios/config.h: Added a sanity check for USE_STOP_INSN_TO_FREE_HOST_CPU. (VRI)
- bdos/fsopnclo.c: Allow '+' character in filenames. (RFB)